<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">红米商城</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>

    <string-array name="spingarr">
        <item>系统错误</item>
        <item>参与者拒绝汇款</item>
        <item>经理操作不合理</item>
        <item>汇款时，对方银行资料与系统提供的有差别</item>
        <item>参与者账号被封锁了</item>
        <item>未确认收款</item>
        <item>错误的操作</item>
        <item>无法接受手机短信</item>
        <item>无法提交提供帮助申请</item>
        <item>无法提交接受帮助申请</item>
        <item>系统显示的金额有误</item>
        <item>更换邮箱</item>
        <item>更换手机号码</item>
        <item>举报诈骗行为</item>
        <item>无法更新汇款状态</item>
        <item>无法更新接款状态</item>
        <item>未获得款项</item>
        <item>我需要更换的经理</item>
    </string-array>

    <string name="title_activity_award_recode">AwardRecodeActivity</string>
    <string name="title_activity_news">NewsActivity</string>
    <string name="title_activity_reply">ReplyActivity</string>
    <string name="active_manager">激活码管理</string>
    <string name="team_manager">团队管理</string>
    <string name="finance_manager">财务管理</string>
    <string name="qiang_manager">抢单币管理</string>
    <string name="person">个人资料</string>
    <string name="usergroup">团队管理</string>
    <string name="tuijianlist">团队成员</string>
    <string name="xiu_pwd">更改登陆密码</string>
    <string name="xiu_sedpwd">更改二级密码</string>
    <string name="reply">留言回复</string>
    <string name="limit_offer">提供額度</string>
    <string name="money_offer">打米金额</string>
    <string name="secpwd">二级密码</string>
    <string name="tip">温馨提示：</string>
    <string name="tip_content">1)本人充分了解红米商城模式，自愿参与并承担投资带来的未知风险与红米自助商城无关\n\n2)虚假订单和超时未打款订单被撤销，会导致计息开始时间和创建时间不一致，请匹配完成后，尽快完成打款以免影响您的收益。</string>
    <string name="tip_content2">温馨提示：收米后请立即给予对方确认，以免给他人或自己带来不便。</string>
    <string name="tip_content3">温馨提示：清算本金后需管理员审核后方能继续操作，请谨慎。</string>
    <string name="confirm">提交</string>
    <string name="hongmi_purse">红米钱包</string>
    <string name="jingli_purse">经理钱包</string>
    <string name="tuijian_purse">推荐钱包</string>
    <string name="money_get">求助金额</string>
    <string name="clear_capital">清算本金</string>
    <string name="title_activity_qiang_order">QiangOrderActivity</string>
    <string name="title_activity_base_list">BaseListActivity</string>
    <string name="title_activity_da_mi">DaMiActivity</string>
    <string name="title_activity_administrator_account">AdministratorAccount</string>
    <string name="title_activity_clear_capital">ClearCapital</string>
    <string name="title_activity_un_freeze_record">UnFreezeRecord</string>
    <string name="title_activity_award_record">AwardRecord</string>

</resources>