<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DaMiActivity" >

    <include layout="@layout/titlebar" />

    <TextView
        android:id="@+id/tv_limit_offer"
        style="@style/layout5"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="120dp"
        android:text="@string/limit_offer" />

    <EditText
        android:id="@+id/et_limit_offer"
        style="@style/layout"
        android:layout_alignBottom="@id/tv_limit_offer"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="30dp"
        android:layout_toRightOf="@id/tv_limit_offer"
        android:background="@drawable/offer_et_money_bg_shape"
        android:enabled="false" />

    <TextView
        android:id="@+id/tv_money_offer"
        style="@style/layout5"
        android:layout_alignLeft="@id/tv_limit_offer"
        android:layout_below="@id/tv_limit_offer"
        android:layout_marginTop="50dp"
        android:text="@string/money_offer" />

    <EditText
        android:id="@+id/et_money_offer"
        style="@style/layout"
        android:layout_alignBottom="@id/tv_money_offer"
        android:layout_alignRight="@id/et_limit_offer"
        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@id/tv_money_offer"
        android:inputType="number"
        android:background="@drawable/offer_et_money_bg_shape"
        android:singleLine="true" />

    <TextView
        android:id="@+id/tv_pwd_offer"
        style="@style/layout5"
        android:layout_alignLeft="@id/tv_money_offer"
        android:layout_below="@id/tv_money_offer"
        android:layout_marginTop="30dp"
        android:text="@string/secpwd" />

    <EditText
        android:id="@+id/et_pwd_offer"
        style="@style/layout"
        android:layout_alignBottom="@id/tv_pwd_offer"
        android:layout_alignRight="@id/et_limit_offer"
        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@id/tv_money_offer"
        android:background="@drawable/offer_et_money_bg_shape"
        android:inputType="textPassword"
        android:singleLine="true" />

    <TextView
        android:id="@+id/confirm_offer"
        android:layout_width="100dp"
        android:layout_height="35dp"
        android:layout_below="@id/tv_pwd_offer"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:background="@color/colorTheme"
        android:gravity="center"
        android:text="@string/confirm"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/tv_tip"
        style="@style/layout5"
        android:layout_below="@id/confirm_offer"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/tip" />

    <TextView
        android:id="@+id/tv_tip_content"
        style="@style/layout5"
        android:layout_alignTop="@id/tv_tip"
        android:layout_toRightOf="@id/tv_tip"
        android:layout_marginRight="10dp"
        android:text="@string/tip_content" />

</RelativeLayout>