<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_accept_help"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <include
       
        layout="@layout/titlebar" />

    <RadioGroup
        android:id="@+id/purse"
        style="@style/layout"
        android:layout_marginTop="55dp"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/hongmi_purse_get"
            style="@style/layout1"
            android:checked="true"
            android:layout_marginLeft="4dp"
            android:text="@string/hongmi_purse" />

        <RadioButton
            android:id="@+id/jingli_purse_get"
            style="@style/layout1"
            android:layout_marginLeft="4dp"
            android:text="@string/jingli_purse" />

        <RadioButton
            android:id="@+id/tuijian_purse_get"
            style="@style/layout1"
            android:layout_marginLeft="4dp"
            android:text="@string/tuijian_purse" />
    </RadioGroup>

    <LinearLayout
        android:id="@+id/money_get"
        style="@style/layout"
        android:layout_below="@id/purse"
        android:layout_marginTop="5dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tv_hongmi_purse"
            style="@style/layout1"
            android:layout_marginRight="5dp"
            android:gravity="right"
            android:text="余额:0" />

        <TextView
            android:id="@+id/tv_jingli_purse"
            style="@style/layout1"
            android:layout_marginRight="5dp"
            android:gravity="right"
            android:text="余额:0" />

        <TextView
            android:id="@+id/tv_tuijian_purse"
            style="@style/layout1"
            android:layout_marginRight="5dp"
            android:gravity="right"
            android:text="余额:0" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_money_get"
        style="@style/layout5"
        android:layout_below="@id/money_get"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="50dp"
        android:text="@string/money_get" />

    <EditText
        android:id="@+id/et_money_get"
        style="@style/layout"
        android:layout_alignBottom="@id/tv_money_get"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="30dp"
        android:layout_toRightOf="@id/tv_money_get"
        android:background="@drawable/offer_et_money_bg_shape"
        android:inputType="number"
        android:singleLine="true" />

    <TextView
        android:id="@+id/tv_pwd_get"
        style="@style/layout5"
        android:layout_below="@id/tv_money_get"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:text="@string/secpwd" />

    <EditText
        android:id="@+id/et_pwd_get"
        style="@style/layout"
        android:layout_alignBottom="@id/tv_pwd_get"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="30dp"
        android:layout_toRightOf="@id/tv_pwd_get"
        android:background="@drawable/offer_et_money_bg_shape"
        android:inputType="textPassword"
        android:singleLine="true" />

   
    <Button
        android:id="@+id/butt_tjbz"
        android:layout_width="100dp" 
        android:layout_height="35dp"
        android:layout_below="@id/tv_pwd_get"
        android:background="@color/colorTheme"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/confirm" 
        
        android:textColor="@color/white"/>
     <TextView
        style="@style/layout"
        android:layout_below="@id/butt_tjbz"
        android:gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/tip_content2"
        android:textSize="15sp" />
    

    </RelativeLayout>
   
