<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/ll_personal_data"
        style="@style/layout"
        android:gravity="center_vertical"
        android:padding="10dp" >

        <ImageView
            style="@style/layout1"
            android:layout_weight="2"
            android:src="@drawable/person_data" />

        <TextView
            style="@style/layout1"
            android:layout_weight="8"
            android:drawableRight="@drawable/go"
            android:text="@string/person"
            android:textSize="20sp" />
    </LinearLayout>

    <View style="@style/space_horizontal1" />

    <LinearLayout
        android:id="@+id/ll_user_group"
        style="@style/layout"
        android:gravity="center_vertical"
        android:padding="10dp" >

        <ImageView
            style="@style/layout1"
            android:layout_weight="2"
            android:src="@drawable/vip_group" />

        <TextView
            style="@style/layout1"
            android:layout_weight="8"
            android:drawableRight="@drawable/go"
            android:text="@string/usergroup"
            android:textSize="20sp" />
    </LinearLayout>

    <View style="@style/space_horizontal1" />

    <LinearLayout
        android:id="@+id/ll_tuijian_list"
        style="@style/layout"
        android:gravity="center_vertical"
        android:padding="10dp" >

        <ImageView
            style="@style/layout1"
            android:layout_weight="2"
            android:src="@drawable/tuijian_list" />

        <TextView
            style="@style/layout1"
            android:layout_weight="8"
            android:drawableRight="@drawable/go"
            android:text="@string/tuijianlist"
            android:textSize="20sp" />
    </LinearLayout>

    <View style="@style/space_horizontal1" />

    <LinearLayout
        android:id="@+id/ll_chang_login_pwd"
        style="@style/layout"
        android:gravity="center_vertical"
        android:padding="10dp" >

        <ImageView
            style="@style/layout1"
            android:layout_weight="2"
            android:src="@drawable/pwd" />

        <TextView
            style="@style/layout1"
            android:layout_weight="8"
            android:drawableRight="@drawable/go"
            android:text="@string/xiu_pwd"
            android:textSize="20sp" />
    </LinearLayout>

    <View style="@style/space_horizontal1" />

    <LinearLayout
        android:id="@+id/ll_chang_second_pwd"
        style="@style/layout"
        android:gravity="center_vertical"
        android:padding="10dp" >

        <ImageView
            style="@style/layout1"
            android:layout_weight="2"
            android:src="@drawable/pwd2" />

        <TextView
            style="@style/layout1"
            android:layout_weight="8"
            android:drawableRight="@drawable/go"
            android:text="@string/xiu_sedpwd"
            android:textSize="20sp" />
    </LinearLayout>

    <View style="@style/space_horizontal1" />

    <LinearLayout
        android:id="@+id/ll_reply"
        style="@style/layout"
        android:gravity="center_vertical"
        android:padding="10dp" >

        <ImageView
            style="@style/layout1"
            android:layout_weight="2"
            android:src="@drawable/reply" />

        <TextView
            style="@style/layout1"
            android:layout_weight="8"
            android:drawableRight="@drawable/go"
            android:text="@string/reply"
            android:textSize="20sp" />
    </LinearLayout>

    <View style="@style/space_horizontal1" />

</LinearLayout>